
syntax = "proto3";

option csharp_namespace = "WebApp.Api.Grpc";

import "google/protobuf/timestamp.proto";

service WebAppGrpcService {
  rpc ListAppsByUserId(ListAppsByUserIdRequest) returns (ListAppsByUserIdResponse);
  rpc GetAppByUserIdAndAppName(GetAppByUserIdAndAppNameRequest) returns (GetAppByUserIdAndAppNameResponse);
  rpc GetAppById(GetAppByIdRequest) returns (GetAppByIdResponse);
  rpc CreateApp(CreateAppRequest) returns (CreateAppResponse);
  rpc RenameApp(RenameAppRequest) returns (RenameAppResponse);
  rpc DeleteApp(DeleteAppRequest) returns (DeleteAppResponse);
}
//GetAllByUserId
message ListAppsByUserIdRequest {
  string user_id = 1;
  int32 page = 2;
}
message ListAppsByUserIdResponse {
  message App {
    int32 app_id = 1;
    string app_name = 2;
  }
  repeated App apps = 1;
}

//GetByUserIdAndAppName
message GetAppByUserIdAndAppNameRequest {
  string user_id = 1;
  string app_name = 2;
}
message GetAppByUserIdAndAppNameResponse {
  int32 app_id = 1;
  string app_name = 2;
  string description = 3;
  google.protobuf.Timestamp created_time = 4;
  google.protobuf.Timestamp updated_time = 5;
}

//GetByAppId
message GetAppByIdRequest {
  int32 app_id = 1;
}
message GetAppByIdResponse {
  int32 app_id = 1;
  string user_id = 2;
  string app_name = 3;
  string description = 4;
  google.protobuf.Timestamp created_time = 5;
  google.protobuf.Timestamp updated_time = 6;
}

//Create
message CreateAppRequest {
  string user_id = 1;
  string app_name = 2;
}
message CreateAppResponse {
  int32 app_id = 1;
}

//Rename
message RenameAppRequest {
  int32 app_id = 1;
  string app_name = 2;
}
message RenameAppResponse {

}

//Delete
message DeleteAppRequest {
  int32 app_id = 1;
}
message DeleteAppResponse {

}