
syntax = "proto3";

option csharp_namespace = "WebApp.Api.Grpc";

package webapp;

import "google/protobuf/timestamp.proto";

service WebApp {
  rpc GetAll(GetAllWebAppRequest) returns (GetAllWebAppResponse);
  rpc Get(GetWebAppRequest) returns (GetWebAppResponse);
  rpc FindByUsernameAndAppName(FindByUsernameAndAppNameRequest) returns (FindByUsernameAndAppNameResponse);
  rpc Create(CreateWebAppRequest) returns (CreateWebAppResponse);
  rpc Rename(RenameWebAppRequest) returns (RenameWebAppResponse);
  rpc Delete(DeleteWebAppRequest) returns (DeleteWebAppResponse);
}
message FindByUsernameAndAppNameRequest {
  string username = 1;
  string app_name = 2;
}
message FindByUsernameAndAppNameResponse {
  int32 app_id = 1;
  string user_id = 2;
}
message GetWebAppRequest {
  string user_id = 1;
  string name = 2;
}
message GetWebAppResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_time = 4;
  google.protobuf.Timestamp updated_time = 5;
}
message GetAllWebAppRequest {
  string user_id = 1;
  int32 page = 2;
}
message GetAllWebAppResponse {
  message WebApp {
    int32 id = 1;
    string name = 2;
  }
  repeated WebApp web_apps = 1;
}
message CreateWebAppRequest {
  string user_id = 1;
  string name = 2;
}
message CreateWebAppResponse {

}
message RenameWebAppRequest {
  string name = 1;
}
message RenameWebAppResponse {

}
message DeleteWebAppRequest {
  string user_id = 1;
  string name = 2;
}
message DeleteWebAppResponse {

}